--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
           go-version: 1.13
       - uses: actions/checkout@v1
       - name: build
-        run: cd ./webapp/go && go build -o app
+        run: cd ./webapp/go && go build -o app && ls -al
