--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,13 @@ jobs:
     name: build app
     runs-on: ubuntu-latest
     steps:
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@master
+        env:
+          SLACK_TITLE: build started
+          SLACK_COLOR: info
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_ICON_EMOJI: ":bell:"
       - name: Set up Go 1.13
         uses: actions/setup-go@v1
         with:
@@ -14,7 +21,17 @@ jobs:
       - name: build
         run: cd ./webapp/go && go build -o app && ls -al
       - name: Slack Notification
+        if: success()
         uses: rtCamp/action-slack-notify@master
         env:
+          SLACK_TITLE: Build success
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_ICON_EMOJI: ":bell:"
+      - name: Slack Notification on Failure
+        uses: rtCamp/action-slack-notify@master
+        if: failure()
+        env:
+          SLACK_TITLE: Build Failure
+          SLACK_COLOR: danger
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON_EMOJI: ":bell:"
